--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Favourite Place</title>
+    <link rel="stylesheet" href="./styles/utilities.css">
+    <link rel="stylesheet" href="./styles/place.css">
 </head>
 <body>
-    <header>
+    <header class="header">
         <h1> Switzerland </h1>
     </header>
 
@@ -18,7 +20,7 @@
             
             Switzerland is known for its mountains (Alps in south, Jura in northwest) but it also has a central plateau of rolling hills, plains, and large lakes. The highest point is Dufourspitze at 4,634m while Lake Maggiore is only 195m above sea level.</p>
 
-        <img src="./pictures/lucerne.jpeg">
+        <img src="./pictures/lucerne.jpeg" alt="lucerne-Switzerland">
         
 
     </main>
