created image hovering of displayed image that shows other image

--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
             
             Switzerland is known for its mountains (Alps in south, Jura in northwest) but it also has a central plateau of rolling hills, plains, and large lakes. The highest point is Dufourspitze at 4,634m while Lake Maggiore is only 195m above sea level.</p>
 
-        <img src="./pictures/lucerne.jpeg" alt="lucerne-Switzerland">
+        <!-- <img class="image" src="./pictures/lucerne.jpeg" alt="lucerne-Switzerland"> -->
+        <div class="image"></div>
         
 
     </main>
