--- a/pages/facts.html
+++ b/pages/facts.html
@@ -17,15 +17,15 @@
 
             <div class="container">
 
-                <div class="container-title">
+                <div class="container-title container-title-pink">
 
                     <h3> Natural Beauty </h3>
 
                 </div>
 
-                <div class="container-description">
+                <div class="container-description container-description-pink">
 
-                    <p> The amazing mountains, heaps of lakes and beautiful villages make for the most beautiful scenery in Switzerland. These landscapes are considered to be what makes Switzerland the perfect destination for vacationing and exploring new cultures.
+                    <p class="description-pink"> The amazing mountains, heaps of lakes and beautiful villages make for the most beautiful scenery in Switzerland. These landscapes are considered to be what makes Switzerland the perfect destination for vacationing and exploring new cultures.
                         The high-peak Alps and mountains make up to 62% of the country’s territory.For those who are interested in winter activities, Switzerland has a lot to offer.
                         Each city in Switzerland has its own individuality, with different landscapes and their unique city life. Cities like Zurich, Bern, Geneva, and Basel among others, offer a different perspective of Switzerland and its diverse culture.
                     </p>
@@ -35,15 +35,15 @@
 
             <div class="container">
 
-                <div class="container-title">
+                <div class="container-title container-title-brown">
 
                     <h3> Strong Economy </h3>
 
                 </div>
 
-                <div class="container-description">
+                <div class="container-description container-description-brown">
 
-                    <p>Switzerland is one of the most competitive economies in the world thanks to its flourishing service sector. By international standards public debt in Switzerland is low, and the country has a competitive tax system. Small and medium-sized enterprises are the mainstay of the export-driven Swiss economy. The European Union is Switzerland's main trading partner.
+                    <p class="description-brown">Switzerland is one of the most competitive economies in the world thanks to its flourishing service sector. By international standards public debt in Switzerland is low, and the country has a competitive tax system. Small and medium-sized enterprises are the mainstay of the export-driven Swiss economy. The European Union is Switzerland's main trading partner.
                         Switzerland has several other distinct advantages including a well-trained workforce, considerable innovative capacity, political stability, a high standard of living and its location at the centre of Europe. For all these reasons, a number of multinationals are based in Switzerland
                         
                         <!--Switzeland offers high-income with top ten in GDP per capita. It has renowned banking and financial hub, and statistically has low unemployment and inflation.
@@ -55,15 +55,15 @@
 
             <div class="container">
 
-                <div class="container-title">
+                <div class="container-title container-title-purple">
 
                     <h3> High Life Quality </h3>
 
                 </div>
 
-                <div class="container-description">
+                <div class="container-description container-description-purple">
 
-                    <p> It does not get any better than this country. The quality of life in Switzerland is pretty much the highest you will find on our planet. That being said, Swiss citizens, Swiss universities and enterprises are also involved in exploring outer space and potential alien life. But let’s stick to the quality of life on earth for the time being.
+                    <p class="description-purple"> It does not get any better than this country. The quality of life in Switzerland is pretty much the highest you will find on our planet. That being said, Swiss citizens, Swiss universities and enterprises are also involved in exploring outer space and potential alien life. But let’s stick to the quality of life on earth for the time being.
                         On the OECD’s Better Life Index, which assesses economic and social well-being, Switzerland performs well on all 11 key indicators of quality of life: housing, income, jobs, community, education, environment, governance, health, life satisfaction, safety and work-life balance.
                     </p>
 
@@ -72,15 +72,15 @@
 
             <div class="container">
 
-                <div class="container-title">
+                <div class="container-title container-title-blue">
 
                     <h3> Delicious Food </h3>
 
                 </div>
 
-                <div class="container-description">
+                <div class="container-description container-description-blue">
 
-                    <p> Ah yes, the Swiss cheese and chocolate. Two of the most loved things by tourists and locals especially. If you ask a Swiss person how they manage to get along with each other despite their differences the answer is their shared love for cheese.
+                    <p class="description-blue"> Ah yes, the Swiss cheese and chocolate. Two of the most loved things by tourists and locals especially. If you ask a Swiss person how they manage to get along with each other despite their differences the answer is their shared love for cheese.
                         Fondue is one of the easiest things to make, still, a lot of debate goes into what kind of cheese you should use and other additions for you to achieve the best result. As for chocolate, what makes it so exceptional is how the swiss make it. An amazing opportunity to learn all about the process is The Chocolate Train! However, there are many other to-die-for Swiss specialties worth trying.
                     </p>
 
@@ -92,7 +92,7 @@
     </main>
 
     <footer>
-        <a href="./../index.html"> Switzerland Country </a>
+        <a class="place-link" href="./../index.html"> Switzerland Country </a>
     </footer>
 </body>
 </html>
