positioned and styled the anchor links

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     </main>
 
-    <footer>
+    <footer class="facts-link">
         <a href="./pages/facts.html"> Reasons to Like Switzerland </a>
     </footer>
 </body>
