--- a/pages/facts.html
+++ b/pages/facts.html
@@ -45,9 +45,6 @@
 
                     <p class="description-brown">Switzerland is one of the most competitive economies in the world thanks to its flourishing service sector. By international standards public debt in Switzerland is low, and the country has a competitive tax system. Small and medium-sized enterprises are the mainstay of the export-driven Swiss economy. The European Union is Switzerland's main trading partner.
                         Switzerland has several other distinct advantages including a well-trained workforce, considerable innovative capacity, political stability, a high standard of living and its location at the centre of Europe. For all these reasons, a number of multinationals are based in Switzerland
-                        
-                        <!--Switzeland offers high-income with top ten in GDP per capita. It has renowned banking and financial hub, and statistically has low unemployment and inflation.
-                        additionally it is a key pharmaceutical and precision manufacturing exporter and a leader in innovation and competitiveness indices -->
                     </p>
 
                 </div>
@@ -91,8 +88,8 @@
 
     </main>
 
-    <footer>
-        <a class="place-link" href="./../index.html"> Switzerland Country </a>
+    <footer class="place-link">
+        <a href="./../index.html"> Switzerland Country </a>
     </footer>
 </body>
 </html>
